samples/_failures_safe/1761454531_032b04_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4caba4cc.c: In function ‘main’:
./samples/SAFE/__tmp_4caba4cc.c:151:9: error: used struct type value where scalar is required
  151 |     if (result
      |         ^~~~~~
./samples/SAFE/__tmp_4caba4cc.c:151:15: error: expected ‘)’ at end of input
  151 |     if (result
      |        ~      ^
      |               )
./samples/SAFE/__tmp_4caba4cc.c:151:5: error: expected declaration or statement at end of input
  151 |     if (result
      |     ^~
